part4/4.01_readiness_ping/main-app/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-ping-connected
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpongconnected
  template:
    metadata:
      labels:
        app: pingpongconnected
    spec:
      containers:
        - name: main-image-connecting
          image: georgemihail/main-app-healthcheck:latest
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 3000
        - name: ping-pong-client
          image: georgemihail/pingpong-client-healthcheck:latest
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 3003
