part4/4.01_readiness_ping/main-app/manifest/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-app-svc
spec:
  type: ClusterIP
  selector:
    app: pingpongconnected
  ports:
    - port: 6789
      protocol: TCP
      targetPort: 3000
