part4/4.01_readiness_ping/main-app/manifest/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
    - http:
        paths:
        - path: /
          backend:
            serviceName: main-app-svc
            servicePort: 6789
        - path: /pingpong
          backend:
            serviceName: ping-pong-svc
            servicePort: 80
